Fix Jira worklog pagination and timer/UI improvements
Jira API only returns 20 worklogs per issue by default. Added pagination support to fetch all worklogs. Also fixed timer modal end time handling and improved notes panel layout/modal positioning.

--- a/public/stylesheets/sass/_base.scss
+++ b/public/stylesheets/sass/_base.scss
@@ -67,6 +67,7 @@ a {
 #calendar {
     height: calc(100vh - 60px) !important;
     padding: $spacing-sm;
+    overflow-x: hidden;
 }
 
 // Light/Dark themes
